# IA_voy

./: README.md
Tareas_waza/Tarea_Pathfindings/: CMakeLists.txt  Shader.h  main.cpp  vertex.glsl
